package edu.uees.disenosoftware.adapter;

public interface Videoconferencia {

    String crearSala(String titulo, String correoDocente);
}
